<resources>
    <string name="app_name">AndroidCodingExamTest01</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_sign_up">Not Registered? Sign Up.</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already Have An Account? Sign In.</string>
</resources>